configuracion mongo prueba

--- a/apps/plantilla/templates/taller3.html
+++ b/apps/plantilla/templates/taller3.html
@@ -5,6 +5,7 @@
 {% endblock%}
 
 {% block content %}
+<h1>mi texto es {{texto}} </h1>
 
     <!--
     <img src="/static/images/underconstruction.jpg">  -->
@@ -15,7 +16,7 @@
       function drawChart() {
         var data = google.visualization.arrayToDataTable([
           ['Usuario', 'Positivo', 'Negativo', 'PocoNegativo', 'PocoPositivo', 'Neutro'],
-          ['2014', 1000, 400, 200,500,150]
+          ['2014', 100, 400, 200,500,150]
 
         ]);
 
