--- a/apps/plantilla/templates/taller3.html
+++ b/apps/plantilla/templates/taller3.html
@@ -16,7 +16,7 @@
       function drawChart() {
         var data = google.visualization.arrayToDataTable([
           ['Usuario', 'Positivo', 'Negativo', 'PocoNegativo', 'PocoPositivo', 'Neutro'],
-          ['2014', 100, 400, 200,500,150]
+          ['2014', {{texto}}, 400, 200,500,150]
 
         ]);
 
