se agrega la nueva vista para el tag Cloud area en construccion y el formulario esta listopara pruebas

--- a/apps/plantilla/templates/menu.html
+++ b/apps/plantilla/templates/menu.html
@@ -30,7 +30,7 @@
 								<li><a href="/#about" class="scroll">Grupo 14 </a></li>
 								<li><a href="/grafo" >Taller 2</a></li>
 								<li><a href="/Taller3" class="scroll">Taller 3 </a><span> </span></li>
-								<li><a href="/Taller3" class="scroll">Taller 4</a></li>
+								<li><a href="/tagcloud" class="scroll">TagCloud</a></li>
 								<div class="clearfix"> </div>
 							</ul>
 							<a href="#" id="pull"><img src="static/images/nav-icon.png" title="menu" /></a>
