--- a/apps/plantilla/templates/taller3.html
+++ b/apps/plantilla/templates/taller3.html
@@ -1,3 +1,4 @@
+
 {% extends 'menu.html' %}
 
 {% block title %}
@@ -5,38 +6,37 @@
 {% endblock%}
 
 {% block content %}
+{% load staticfiles %}
 <h1>mi texto es {{amigos}} </h1>
 
        <!--
     <img src="/static/images/underconstruction.jpg">  -->
-    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-
-
-
+	<script src="{% static 'js/loader.js'%}"></script>
     <script type="text/javascript">
+
       google.charts.load('current', {'packages':['corechart']});
       google.charts.setOnLoadCallback(drawChart);
       
 	  function drawChart() {
 
 		var data = new google.visualization.DataTable();
-         data.addColumn('string', 'Country');
-         data.addColumn('number', 'GDP');
+         data.addColumn('string', 'terminos');  
+         data.addColumn('number', 'Seguidores y amigos');
+     
          data.addRows([
-           ['US', 16768100],
-           ['China', 9181204],
-           ['Japan', 4898532],
-           ['Germany', 3730261],
-           ['France', 2]
+           ['Seguidores', {{numero_seguidores}}],
+           ['Amigos', {{amigos}}]
          ]);
 
-		var options = { title: 'Company Performance',
+		var options = { title: '{{nombre_usuario}}',
+        legend: { position: 'top', maxLines: 3 },
+		colors: ['#5C3292', '#1A8763'],
+		interpolateNulls: false,
 		vAxis: {scaleType: 'mirrorLog' }
 
 		};
 
-        var chart = new google.visualization.ColumnChart(document.getElementById('barchart_material'));
-
+        var chart = new google.visualization.ColumnChart(document.getElementById('histogra_seguidores_amigos_por_usuario'));
  		chart.draw(data, options);
       }
     </script>
@@ -46,27 +46,23 @@
       google.charts.load('current', {'packages':['corechart']});
       google.charts.setOnLoadCallback(drawChart);
       function drawChart() {
-        var data =  new google.visualization.DataTable()
-		data.addColumn('number','usuario');
-		data.addColumn('number','Sales');
-		data.addColumn('number','Expenses');
-		data.addColumn('number','Profit');
+        var data = google.visualization.arrayToDataTable([
+          ['Task', 'Hours per Day'],
+          ['Negativo',     11],
+          ['Muy Negativo',      2],
+          ['Neutro',  2],
+          ['Positivo', 2],
+          ['Muy positivo',    7]
+        ]
 
-		data.addRows([
-		[20,30,50,80],
-		[1, 1000, 400, 200],
-		[200, 1000, 400, 200],
-		[300, 1000, 400, 200]
-		]);
+		);
 
         var options = {
-          chart: {
-            title: 'Indices por Sentimientos',
-          },
-          bars: 'vertical' // Required for Material Bar Charts.
+          title: 'Sentimientos de los tweets',
+          is3D: true,
         };
 
-        var chart = new google.visualization.BarChart(document.getElementById('histograma'));
+        var chart = new google.visualization.PieChart(document.getElementById('torta_porcentajes_tuitspublicados'));
 
         chart.draw(data, options);
       }
@@ -100,51 +96,44 @@
 
     <script type="text/javascript"></script>
     <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.1/themes/base/jquery-ui.css" />
-    <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
-    <script src="http://code.jquery.com/ui/1.10.1/jquery-ui.js"></script>
-    <script src="https://d3js.org/d3.v4.min.js"></script>
-
     <div id="taller3">
-
-    <div class="col-md-4">
- 	   <div class="form-group">
-	<form method="post">
-    {% csrf_token %}
-    {{ form}}
-
-
-
-    <input type="submit" value="Submit" />
-</form>		
-
-
+<div class="row">
+    <div class="col-md-6">
+ 	   <div class="form-group",class="btn btn-success">
+		<form method="post" >
+		    {% csrf_token %}
+		    {{ form}}
+		    <input type="submit" class="btn btn-success"  value="Consultar">
+		</form>		
 	   </div> 
-    <div id="barchart_material" style="width: 400px; height: 250px;"></div>
-    </div>  
+    </div> 
 
-    <div class="col-md-4">
-    <div class="form-group">
-		<form action="numtuits" method="post">
-			<label for="numtuits">Nombre del usuario de tweeter</label>
-			<input id="numtuits" type="text" name="Usuario a consultar" value="{{ current_name }}">
-			<input type="submit" class="btn btn-success"  value="Consultar">
-		</form>
-    </div>
-    <div id="histograma" style="width: 400px; height: 250px;"></div>
+    <div class="col-md-6">
+		 <div id="histogra_seguidores_amigos_por_usuario" style="width: 600px; height: 350px;"></div>
 	</div> 
+</div> 
 
-    <div class="col-md-4">
+<!--***************************************AQUI ESTA LA SEGUNDA FILA DE LA VISUALIZACION*****************************-->
+<div class="row">
+    <div class="col-md-6">
+		<br>
+		<label >Porcentaje de Tweets Publicados P,N,MP, MN, NEUTRO</label>
+    
+    <div id="torta_porcentajes_tuitspublicados" style="width: 800px; height: 350px;"></div>
+	</div>
+
+
+    <div class="col-md-6">
     <div class="form-group">
 		<form action="otro" method="post">
-			<label for="otro">Nombre del usuario de tweeter</label>
+			<label for="otro">ALGO DE LA CISUALIZACION</label>
 			<input id="otro" type="text" name="Usuario a consultar" value="{{ current_name }}">
 			<input type="submit" class="btn btn-success"  value="Consultar">
 		</form>
     </div> 
-
-    <div id="Visual2" style="width: 400px; height: 250px;"></div>
+    <div id="Visual2" style="width: 900px; height: 250px;"></div>
     </div>
-
+</div>
 
     <script type="text/javascript">
          function cargar1(mynodes, myedges){
