funciona un tag cloud de prueba pendiente el conteo de palabras para incluirlas en el tag se modifico solo lavista tagcloud

--- a/apps/plantilla/templates/taller3.html
+++ b/apps/plantilla/templates/taller3.html
@@ -8,12 +8,13 @@
 {% block content %}
 {% load staticfiles %}
 
-<h1>mi texto es {{amigos}} </h1>
+<h1>mi texto es {{palabras_tuits}} </h1>
 
        <!--
     <img src="/static/images/underconstruction.jpg">  -->
+
 	<script src="{% static 'js/loader.js'%}"></script>
-    <script type="text/javascript">
+<script type="text/javascript">
 
       google.charts.load('current', {'packages':['corechart']});
       google.charts.setOnLoadCallback(drawChart);
