--- a/apps/plantilla/templates/tagcloud.html
+++ b/apps/plantilla/templates/tagcloud.html
@@ -1,118 +1,75 @@
 {% extends 'menu.html' %}
 
 {% block title %}
+
     <title>tagcloud</title>
+
 {% endblock%}
 
 {% block content %}
 {% load staticfiles %}
 	
-	<h1>mi texto es {{texto}} </h1>
-    <link rel="stylesheet" type="text/css" href="jqcloud.css" />
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
-    <script type="text/javascript" src="jqcloud-1.0.4.js"></script>
-
-    <script type="text/javascript">
-      var word_list = new Array(
-        {text: "Lorem", weight: 13, link: "https://github.com/lucaong/jQCloud"},
-        {text: "Ipsum", weight: 10.5, link: "http://jquery.com/"},
-        {text: "Dolor", weight: 9.4},
-        {text: "Sit", weight: 8},
-        {text: "Amet", weight: 6.2},
-        {text: "Consectetur", weight: 5},
-        {text: "Adipiscing", weight: 5},
-        {text: "Elit", weight: 5},
-        {text: "Nam et", weight: 5},
-        {text: "Leo", weight: 4},
-        {text: "Sapien", weight: 4, link: "http://www.lucaongaro.eu/"},
-        {text: "Pellentesque", weight: 3},
-        {text: "habitant", weight: 3},
-        {text: "morbi", weight: 3},
-        {text: "tristisque", weight: 3},
-        {text: "senectus", weight: 3},
-        {text: "et netus", weight: 3},
-        {text: "et malesuada", weight: 3},
-        {text: "fames", weight: 2},
-        {text: "ac turpis", weight: 2},
-        {text: "egestas", weight: 2},
-        {text: "Aenean", weight: 2},
-        {text: "vestibulum", weight: 2},
-        {text: "elit", weight: 2},
-        {text: "sit amet", weight: 2},
-        {text: "metus", weight: 2},
-        {text: "adipiscing", weight: 2},
-        {text: "ut ultrices", weight: 2},
-        {text: "justo", weight: 1},
-        {text: "dictum", weight: 1},
-        {text: "Ut et leo", weight: 1},
-        {text: "metus", weight: 1},
-        {text: "at molestie", weight: 1},
-        {text: "purus", weight: 1},
-        {text: "Curabitur", weight: 1},
-        {text: "diam", weight: 1},
-        {text: "dui", weight: 1},
-        {text: "ullamcorper", weight: 1},
-        {text: "id vuluptate ut", weight: 1},
-        {text: "mattis", weight: 1},
-        {text: "et nulla", weight: 1},
-        {text: "Sed", weight: 1}
-      );
-      $(document).ready(function() {
-        $("#wordcloud").jQCloud(word_list);
-      });
-</script>
-
-<style type="text/css">
-      body {
-        background: #eee;
-        font-family: Helvetica, Arial, sans-serif;
-      }
-      #wordcloud {
-        margin: 30px auto;
-        width: 600px;
-        height: 371px;
-        border: none;
-      }
-      #wordcloud span.w10, #wordcloud span.w9, #wordcloud span.w8, #wordcloud span.w7 {
-        text-shadow: 0px 1px 1px #ccc;
-      }
-      #wordcloud span.w3, #wordcloud span.w2, #wordcloud span.w1 {
-        text-shadow: 0px 1px 1px #fff;
-      }
-      #footer {
-        font-size: 13px;
-        color: #aaa;
-        text-align: center;
-        width: 600px;
-        margin: 30px auto;
-        padding: 0.5em;
-        text-shadow: 0px 1px 1px #fff;
-        border-top: 1px dotted #ddd;
-      }
-      #footer a {
-        color: #0af;
-        text-decoration: none;
-      }
- </style>
-
-
-    <div id="wordcloud"></div>
-
-    <!-- Google Analytics -->
-    <script type='text/javascript'> 
-      //<![CDATA[
-        var _gaq = _gaq || [];
-        _gaq.push(['_setAccount', 'UA-772585-1']);
-        _gaq.push(['_trackPageview']);
-
-        (function() {
-          var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-          ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-          var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-        })();
-      //]]>
-    </script>
 <h1>AQUI DEBE QUEDAR EL TAGCLOUD </h1>
+
+
+
+<div id="tagcloud" style="width: 600px; height: 350px;">
+
+	<script src="{% static 'js/d3.min.js'%}"></script>
+	<script src="{% static 'js/jquery.min.js'%}"></script>
+	<script src="{% static 'js/jqcloud-1.0.4.js'%}"></script>
+	<link rel="stylesheet" href="{% static 'css/jqcloud.css'%}">
+
+      
+<script type="text/javascript">
+
+var word_array = [
+          {text: "Lorem", weight: 15},
+          {text: "Ipsum", weight: 10, link: "http://jquery.com/"},
+          {text: "Dolor", weight: 20},
+          {text: "Sit", weight: 8},
+         {text: "Dolor", weight: 8},
+          {text: "Sit", weight: 38},
+         {text: "Dolor", weight: 70},
+          {text: "Sit", weight: 12},
+         {text: "Dolor", weight: 15},
+          {text: "Sit", weight: 18},
+          {text: "Lorem", weight: 15},
+          {text: "Ipsum", weight: 10, link: "http://jquery.com/"},
+          {text: "Dolor", weight: 20},
+          {text: "Sit", weight: 8},
+         {text: "Dolor", weight: 8},
+          {text: "Sit", weight: 38},
+         {text: "Dolor", weight: 70},
+          {text: "Sit", weight: 12},
+         {text: "Dolor", weight: 15},
+          {text: "Sit", weight: 18},
+          {text: "Lorem", weight: 15},
+          {text: "Ipsum", weight: 10, link: "http://jquery.com/"},
+          {text: "Dolor", weight: 20},
+          {text: "Sit", weight: 8},
+         {text: "Dolor", weight: 8},
+          {text: "Sit", weight: 38},
+         {text: "Dolor", weight: 70},
+          {text: "Sit", weight: 12},
+         {text: "Dolor", weight: 15},
+          {text: "Sit", weight: 18},
+          {text: "Amet", weight: 20}
+          // ...as many words as you want
+      ];
+
+      $(function() {
+        // When DOM is ready, select the container element and call the jQCloud method, passing the array of words as the first argument.
+        $("#example").jQCloud(word_array);
+      });
+    </script>
+
+<script>
+
+</script>
+  <div id="example" style="width: 1000px; height: 500px;"></div> 
+
 </div>
+
 
 {% endblock%}
