--- a/apps/plantilla/templates/tagcloud.html
+++ b/apps/plantilla/templates/tagcloud.html
@@ -25,10 +25,10 @@
 
 var word_array = [
           {text: "Lorem", weight: 15},
-          {text: "Ipsum", weight: 10, link: "http://jquery.com/"},
-          {text: "Dolor", weight: 20},
+          {text: "Ipsum", weight: 10},
+          {text: "Dolodddr", weight: 20},
           {text: "Sit", weight: 8},
-         {text: "Dolor", weight: 8},
+         {text: "Dolorddddsxsxs", weight: 8},
           {text: "Sit", weight: 38},
          {text: "Dolor", weight: 70},
           {text: "Sit", weight: 12},
@@ -36,7 +36,7 @@ var word_array = [
           {text: "Sit", weight: 18},
           {text: "Lorem", weight: 15},
           {text: "Ipsum", weight: 10, link: "http://jquery.com/"},
-          {text: "Dolor", weight: 20},
+          {text: "Dolodxsxsr", weight: 20},
           {text: "Sit", weight: 8},
          {text: "Dolor", weight: 8},
           {text: "Sit", weight: 38},
