--- a/apps/plantilla/templates/taller3.html
+++ b/apps/plantilla/templates/taller3.html
@@ -8,7 +8,7 @@
 {% block content %}
 {% load staticfiles %}
 
-<h1>mi texto es {{usuario}} </h1>
+<h1>mi texto es {{lista}} </h1>
 
        <!--
     <img src="/static/images/underconstruction.jpg">  -->
