--- a/apps/plantilla/templates/taller3.html
+++ b/apps/plantilla/templates/taller3.html
@@ -8,7 +8,7 @@
 {% block content %}
 {% load staticfiles %}
 
-<h1>mi texto es {{lista}} </h1>
+<h1>mi texto es {{nombre_usuario}} </h1>
 
        <!--
     <img src="/static/images/underconstruction.jpg">  -->
@@ -105,7 +105,7 @@
 		<form method="post" >
 		    {% csrf_token %}
 		    {{ form}}
-		    <input type="submit" class="btn btn-success"  value="Consultar">
+		    <input type="submit" class="btn btn-success"  value="Consultar1">
 		</form>		
 	   </div> 
     </div> 
