--- a/apps/plantilla/templates/taller3.html
+++ b/apps/plantilla/templates/taller3.html
@@ -76,7 +76,7 @@
       function drawChart() {
         var data =  google.visualization.arrayToDataTable([
            [' 2014', '19 Octubre', '22 Octubre', '24 Octubre', '25 Octubre', '26 Octubre', '27 Octubre', '28 Octubre', '29 Octubre'],
-			['2016',100,200, 300,400,500,600,700,800]
+			['2016',{{historico19}},{{historico22}},40000,400,500,600,700,800]
 
         ]);
 
