--- a/apps/plantilla/templates/taller3.html
+++ b/apps/plantilla/templates/taller3.html
@@ -128,7 +128,7 @@
     <div class="col-md-6">
     <div class="form-group">
 		<form action="otro" method="post">
-			<label for="otro">ALGO DE LA CISUALIZACION</label>
+			<label for="otro">ALGO DE LA VISUALIZACION</label>
 			<input id="otro" type="text" name="Usuario a consultar" value="{{ current_name }}">
 			<input type="submit" class="btn btn-success"  value="Consultar">
 		</form>
