--- a/apps/plantilla/templates/inicio.html
+++ b/apps/plantilla/templates/inicio.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 	
-
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<script type="text/javascript">
 			jQuery(document).ready(function($) {
 				$(".scroll").click(function(event){		
