--- a/apps/plantilla/templates/menu.html
+++ b/apps/plantilla/templates/menu.html
@@ -6,6 +6,7 @@
 
 		{% block title %}
 		{% endblock%}
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />		
 		<link rel="stylesheet" href="{% static 'css/bootstrap.css'%}">
 		<link rel="stylesheet" href="{% static 'css/style.css'%}">
 		<!-- estaticos del grafo -->
