--- a/apps/plantilla/templates/menu.html
+++ b/apps/plantilla/templates/menu.html
@@ -32,6 +32,7 @@
 								<li><a href="/grafo" >Taller 2</a></li>
 								<li><a href="/Taller3" class="scroll">Taller 3 </a><span> </span></li>
 								<li><a href="/tagcloud" class="scroll">TagCloud</a></li>
+								<li><a href="/punto3" class="scroll">Punto3</a></li>
 								<div class="clearfix"> </div>
 							</ul>
 							<a href="#" id="pull"><img src="static/images/nav-icon.png" title="menu" /></a>
