--- a/apps/plantilla/templates/taller3.html
+++ b/apps/plantilla/templates/taller3.html
@@ -8,13 +8,12 @@
 {% block content %}
 {% load staticfiles %}
 
-<h1>mi texto es {{nombre_usuario}} </h1>
-
        <!--
     <img src="/static/images/underconstruction.jpg">  -->
+	<h1> VISTA DEL PUNTO3 </h1>
 
 	<script src="{% static 'js/loader.js'%}"></script>
-<script type="text/javascript">
+	<script type="text/javascript">
 
       google.charts.load('current', {'packages':['corechart']});
       google.charts.setOnLoadCallback(drawChart);
@@ -101,11 +100,12 @@
     <div id="taller3">
 <div class="row">
     <div class="col-md-6">
+        <br>
  	   <div class="form-group",class="btn btn-success">
 		<form method="post" >
 		    {% csrf_token %}
 		    {{ form}}
-		    <input type="submit" class="btn btn-success"  value="Consultar1">
+		    <br>
 		</form>		
 	   </div> 
     </div> 
@@ -128,9 +128,8 @@
     <div class="col-md-6">
     <div class="form-group">
 		<form action="otro" method="post">
-			<label for="otro">ALGO DE LA VISUALIZACION</label>
-			<input id="otro" type="text" name="Usuario a consultar" value="{{ current_name }}">
-			<input type="submit" class="btn btn-success"  value="Consultar">
+			<label for="otro">Historico de seguidores por usuario </label>
+	
 		</form>
     </div> 
     <div id="Visual2" style="width: 900px; height: 400px;"></div>
