--- a/apps/plantilla/templates/menu.html
+++ b/apps/plantilla/templates/menu.html
@@ -33,7 +33,9 @@
 								<li><a href="/Taller3" class="scroll">Taller 3 </a><span> </span></li>
 								<li><a href="/tagcloud" class="scroll">TagCloud</a></li>
 								<li><a href="/punto3" class="scroll">Punto3</a></li>
-								<li><a href="/taller4" class="scroll">Taller4</a></li>
+								<li><a href="/taller4_parte1" class="scroll">Questions</a></li>
+								<li><a href="/taller4_parte2" class="scroll">TagCloud</a></li>
+								<li><a href="/taller4_parte3" class="scroll">GeoPlaces</a></li>
 								<div class="clearfix"> </div>
 							</ul>
 							<a href="#" id="pull"><img src="static/images/nav-icon.png" title="menu" /></a>
