trae las entidades de una  frase ejemplo sobre una vista

--- a/apps/plantilla/templates/menu.html
+++ b/apps/plantilla/templates/menu.html
@@ -30,12 +30,12 @@
 								<li><a href="/" class="scroll">INICIO</a><span> </span></li>
 								<li><a href="/#about" class="scroll">Grupo 14 </a></li>
 								<li><a href="/grafo" >Taller 2</a></li>
-								<li><a href="/Taller3" class="scroll">Taller 3 </a><span> </span></li>
-								<li><a href="/tagcloud" class="scroll">TagCloud</a></li>
-								<li><a href="/punto3" class="scroll">Punto3</a></li>
-								<li><a href="/taller4_parte1" class="scroll">Questions</a></li>
-								<li><a href="/taller4_parte2" class="scroll">TagCloud</a></li>
-								<li><a href="/taller4_parte3" class="scroll">GeoPlaces</a></li>
+								<li><a href="/Taller3" >Taller 3 </a><span> </span></li>
+								<li><a href="/tagcloud" >TagCloud</a></li>
+								<li><a href="/punto3" >Punto3</a></li>
+								<li><a href="/taller4_parte1" >Questions</a></li>
+								<li><a href="/taller4_parte2" >TagCloud</a></li>
+								<li><a href="/taller4_parte3">GeoPlaces</a></li>
 								<div class="clearfix"> </div>
 							</ul>
 							<a href="#" id="pull"><img src="static/images/nav-icon.png" title="menu" /></a>
