--- a/apps/plantilla/templates/taller4_parte1.html
+++ b/apps/plantilla/templates/taller4_parte1.html
@@ -6,7 +6,9 @@
 {% endblock%}
 
 {% block content %}
-<h1>mi texto es {{numero}} </h1>
+<h1>mi texto es {{classified_text}} </h1>
+<h1>mi texto es {{t}} </h1>
+<h1>mi texto es {{b}} </h1>
 
     <img src="/static/images/underconstruction.jpg">  
    
