--- a/static/css/main.css
+++ b/static/css/main.css
@@ -72,3 +72,5 @@ line.link {
   stroke: #6A0888; /*DEFINE EL COLOR PARA LAS LINEAS QUE UNEN A LOS NODOS */
   stroke-width: 1.5px;
 }
+
+/*Estilos para el mapa*/
