Sube dos puntos del mundo 1 quemado Bogota 1 uno España

--- a/apps/plantilla/templates/menu.html
+++ b/apps/plantilla/templates/menu.html
@@ -29,15 +29,17 @@
 						<!----start-top-nav---->
 						 <nav class="top-nav">
 							<ul class="top-nav">
+								<!--
 								<li><a href="/" class="scroll">INICIO</a><span> </span></li>
 								<li><a href="/#about" class="scroll">Grupo 14 </a></li>
 								<li><a href="/grafo" >Taller 2</a></li>
 								<li><a href="/Taller3" >Taller 3 </a><span> </span></li>
 								<li><a href="/tagcloud" >TagCloud</a></li>
-								<li><a href="/punto3" >Punto3</a></li>
+								<li><a href="/punto3" >Punto3</a></li>  -->
 								<li><a href="/taller4_parte1" >Questions</a></li>
 								<li><a href="/taller4_parte2" >TagCloud</a></li>
 								<li><a href="/taller4_parte3">GeoPlaces</a></li>
+								<li><a href="/taller4_parte4">DemoVivo</a></li>
 								<div class="clearfix"> </div>
 							</ul>
 							<a href="#" id="pull"><img src="static/images/nav-icon.png" title="menu" /></a>
@@ -46,14 +48,12 @@
 						</div>
 					</div>
 			</div>
-
-</head>
-
 			<div >
 			{% block content %}
 			{% endblock%}
 			</div>
 
+</head>
 </html>					
      
 		
