--- a/apps/plantilla/templates/taller4_parte3.html
+++ b/apps/plantilla/templates/taller4_parte3.html
@@ -6,8 +6,8 @@
 {% endblock%}
 
 {% block content %}
-<h1>mi texto es {{numero3}} </h1>
-
+<h1>mi texto es {{longit}} </h1>
+<h1>mi texto es {{lat}} </h1>
 <style type="text/css">
   #mapid { 
   		height: 1200px; 
@@ -25,8 +25,14 @@ L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token={
     accessToken: 'pk.eyJ1IjoiZnJhbmN5Nzc3IiwiYSI6ImNpdndzY294eDAwdW0yenBieDN1dDRrcWgifQ.XY7FywK8FL23oiRD2vX8Bw'
 }).addTo(mymap);
 
-var marker = L.marker([4.598889, -74.080833]).addTo(mymap);
+var marker = L.marker([4.598889, -74]).addTo(mymap);
+console.log({{lat}})
+console.log({{longit}})
+
+var marker2 = L.marker([{{lat}}, {{longit}}]).addTo(mymap);
+
 //se adiciona el circulo enel mapa
+/*
 var circle = L.circle([51.508, -0.11], {
     color: 'red',
     fillColor: '#f03',
@@ -40,14 +46,15 @@ var polygon = L.polygon([
     [51.503, -0.06],
     [51.51, -0.047]
 ]).addTo(mymap);
+*/
 //colocnado a cada punto informacion popup
 marker.bindPopup("<b>PUunto de localizacion</b><br>Esto es un popup.").openPopup();
-circle.bindPopup("I am a circle.");
-polygon.bindPopup("I am a polygon.");
+marker2.bindPopup("Debe ser España");
+
 
 
 var popup = L.popup()
-    .setLatLng([4.598889, -74.080833])
+    .setLatLng([4.598889, -74])
     .setContent("PROYECTO BIGDATA2016")
     .openOn(mymap);
 
