coloca multiples marcadores de ejemplo pendiente añadir con el listado por sacar para cada pregunta

--- a/apps/plantilla/templates/menu.html
+++ b/apps/plantilla/templates/menu.html
@@ -17,8 +17,9 @@
 		<!-- estaticos del grafo -->
 		<script src="{% static 'js/jquery.min.js'%}"></script>
 		<!--Funcionalidaddes para leaflef -->
-		<script src="https://unpkg.com/leaflet@1.0.2/dist/leaflet.js"></script>
-		<link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.2/dist/leaflet.css" />
+		<link   rel="stylesheet"   href="http://cdn.leafletjs.com/leaflet-0.7/leaflet.css"  />
+    	<script type="text/javascript" src="/static/js/planes.js">></script>
+    	
 		
 		<div id="home" class="header">
 					<div class="top-header">
