--- a/apps/plantilla/templates/taller4_parte3.html
+++ b/apps/plantilla/templates/taller4_parte3.html
@@ -6,12 +6,42 @@
 {% endblock%}
 
 {% block content %}
+<!--
 <h1>mi texto es {{longit}} </h1>
-<h1>mi texto es {{lat}} </h1>
+<h1>mi texto es {{lat}} </h1>  -->
+<!--SEGUNDA PRUEBA DE PUNTO  -->
+<div id="map" align="center" position="absolute" style="width: 2850px; height: 1200px"></div>
+<script  src="http://cdn.leafletjs.com/leaflet-0.7/leaflet.js">  </script>    
+    <script>
+
+        var map = L.map('map').setView([46.743346983097744, -27.74368660000005], 3); //se pone el centro del mapa y el nivel de zoom
+        mapLink = 
+            '<a href="http://openstreetmap.org">OpenStreetMap</a>';
+        L.tileLayer(
+            'http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+            attribution: '&copy; ' + mapLink + ' Contributors',
+            maxZoom: 18,
+            }).addTo(map);
+
+
+        for (var i = 0; i < planes.length; i++) {
+            marker = new L.marker([planes[i][1],planes[i][2]])
+                .bindPopup(planes[i][0])
+                .addTo(map);
+        }
+              
+    </script>
+
+</div>
+{% endblock%}
+
+<!--EJEMPLO QUE FUNCIONA Y TRAE VALORES DEL BACKENT 
+
+
 <style type="text/css">
   #mapid { 
-  		height: 1200px; 
-		}
+        height: 1200px; 
+        }
 </style> 
 
 <div id="mapid">
@@ -30,28 +60,14 @@ console.log({{lat}})
 console.log({{longit}})
 
 var marker2 = L.marker([{{lat}}, {{longit}}]).addTo(mymap);
+var marker3 = L.marker([48.8567, 2.35083]).addTo(mymap);
+var marker4 = L.marker([40.4333, -3.7]).addTo(mymap);
 
-//se adiciona el circulo enel mapa
-/*
-var circle = L.circle([51.508, -0.11], {
-    color: 'red',
-    fillColor: '#f03',
-    fillOpacity: 0.5,
-    radius: 500
-}).addTo(mymap);
-
-//se adiciona el poigono enel mapa
-var polygon = L.polygon([
-    [51.509, -0.08],
-    [51.503, -0.06],
-    [51.51, -0.047]
-]).addTo(mymap);
-*/
 //colocnado a cada punto informacion popup
 marker.bindPopup("<b>PUunto de localizacion</b><br>Esto es un popup.").openPopup();
 marker2.bindPopup("Debe ser España");
-
-
+marker3.bindPopup("Debe ser España");
+marker4.bindPopup("Debe ser Francia");
 
 var popup = L.popup()
     .setLatLng([4.598889, -74])
@@ -59,5 +75,4 @@ var popup = L.popup()
     .openOn(mymap);
 
 </script>
-</div>
-{% endblock%}
+-->
